--- a/public/about/index.html
+++ b/public/about/index.html
@@ -114,7 +114,7 @@ if (!doNotTrack) {
 <body>
   <div id="mobile-navbar" class="mobile-navbar">
   <div class="mobile-header-logo">
-    <a href="/rden.netlify.com/" class="logo">muaydata</a>
+    <a href="/rden.netlify.com/" class="logo">RDen</a>
   </div>
   <div class="mobile-navbar-icon">
     <span></span>
@@ -224,7 +224,7 @@ if (!doNotTrack) {
     <div class="logo-wrapper">
   <a href="/rden.netlify.com/" class="logo">
     
-      muaydata
+      RDen
     
   </a>
 </div>
